--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "tailwindcss": "latest"
+    "@astrojs/tailwind": "^6.0.2",
+    "tailwindcss": "^3.4.0"
   }
 }
